--- a/shared/components/Header/Header.module.css
+++ b/shared/components/Header/Header.module.css
@@ -1,6 +1,24 @@
-.header {
+.headerContainer {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	gap: 100px;
+	margin-bottom: 42px;
+}
+.btnBlock {
+	display: flex;
+	align-items: center;
+	gap: 15px;
+}
+.header {
+	position: relative;
+}
+.header::after {
+	content: "";
+	width: 100vw;
+	height: 1px;
+	position: absolute;
+	background-color: rgb(237, 237, 237);
+	bottom: 0;
+	left: 0;
 }
