add filter store

--- a/shared/components/Filters/IngredientsFilter/IngredientsFilter.module.css
+++ b/shared/components/Filters/IngredientsFilter/IngredientsFilter.module.css
@@ -3,3 +3,9 @@
 	flex-direction: column;
 	gap: 15px;
 }
+.group > div {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 15px;
+}
