--- a/shared/components/PizzasContainer/PizzasContainer.module.css
+++ b/shared/components/PizzasContainer/PizzasContainer.module.css
@@ -1,6 +1,7 @@
 .container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, 285px);
+	column-gap: calc((100% - 285px * 3) / 2);
 	row-gap: 15px;
 }
