--- a/shared/components/Header/Header.module.css
+++ b/shared/components/Header/Header.module.css
@@ -18,7 +18,7 @@
 	width: 100vw;
 	height: 1px;
 	position: absolute;
-	background-color: rgb(237, 237, 237);
+	background-color: #383838;
 	bottom: 0;
 	left: 0;
 }
