--- a/shared/components/PizzaModal/PizzaModal.module.scss
+++ b/shared/components/PizzaModal/PizzaModal.module.scss
@@ -1,6 +1,67 @@
 .modal {
+	display: flex;
+
 	section {
 		width: 1000px;
 		height: 580px;
+		overflow: hidden;
+		& > div {
+			height: 100%;
+			padding: 0;
+		}
+	}
+}
+.container {
+	display: flex;
+	height: 100%;
+}
+.imageBlock {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 50%;
+	height: 100%;
+	background-color: #2b2b2b;
+	padding: 15px;
+}
+.propertyBlock {
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	padding: 15px;
+}
+.ingredientsBlock {
+	height: 300px;
+	width: 100%;
+	padding-right: 15px;
+	overflow-y: scroll;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	row-gap: 20px;
+	&::-webkit-scrollbar-thumb {
+		background-color: var(--accent-color);
+		border-radius: 10px;
+		cursor: pointer;
+	}
+	&::-webkit-scrollbar {
+		width: 6px;
+		background-color: #1a1a1a;
+	}
+}
+.optionsBlock {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+
+	*[data-active="true"] {
+		color: var(--accent-color);
+	}
+}
+.addBtn {
+	height: 50px;
+	span {
+		font-size: 20px;
 	}
 }
