--- a/shared/components/IngredientCard/IngredientCard.module.scss
+++ b/shared/components/IngredientCard/IngredientCard.module.scss
@@ -11,6 +11,7 @@
 	cursor: pointer;
 	border: 1px solid transparent;
 	transition: all 0.15s ease-in-out;
+	position: relative;
 
 	img {
 		transition: all 0.15s ease-in-out;
@@ -30,4 +31,15 @@
 }
 .checked {
 	border: 1px solid var(--accent-color);
+}
+.checkIcon {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	visibility: hidden;
+	transition: all 0.15s ease-in-out;
+
+	&.isChecked {
+		visibility: visible;
+	}
 }
