--- a/shared/components/PizzaModal/PizzaModal.module.scss
+++ b/shared/components/PizzaModal/PizzaModal.module.scss
@@ -13,7 +13,11 @@
 }
 .container {
 	display: flex;
-	height: 100%;
+	width: 1000px;
+	height: 580px;
+	background-color: #242424;
+	border-radius: 20px;
+	overflow: hidden;
 }
 .imageBlock {
 	display: flex;
@@ -28,7 +32,7 @@
 	width: 50%;
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 10px;
 	padding: 15px;
 }
 .ingredientsBlock {
@@ -50,6 +54,9 @@
 		background-color: #1a1a1a;
 	}
 }
+.ingredientsTitle {
+	margin-bottom: 5px;
+}
 .optionsBlock {
 	display: flex;
 	flex-direction: column;
@@ -60,8 +67,9 @@
 	}
 }
 .addBtn {
-	height: 50px;
+	height: 45px;
+	margin-top: 8px;
 	span {
-		font-size: 20px;
+		font-size: 16px;
 	}
 }
