--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 body {
+	width: 100vw;
 	font-weight: 400;
 	min-height: 100vh;
 	font-size: 16px;
@@ -13,4 +14,8 @@ body {
 	max-width: 1270px;
 	margin: 0 auto;
 	padding: 0 10px;
+}
+
+.modal-open {
+	overflow-y: hidden;
 }
